--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         }
     ],
     "require": {
-        "php": "^5.3.2 || ^7.0"
+        "php": "^5.3.2 || ^7.0 || ^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
-        "satooshi/php-coveralls": "^1.0",
-        "squizlabs/php_codesniffer": "2.*"
+        "phpunit/phpunit": "~4.8",
+        "php-coveralls/php-coveralls": "~2.4",
+        "squizlabs/php_codesniffer": "~3.6"
     },
     "scripts": {
         "phar:install-tools": [
