--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "consolidation/cgr",
+    "name": "yoeunes/cgr",
     "description": "Safer alternative to 'composer global require'.",
     "keywords": ["package", "composer"],
     "type": "project",
